# todo-console-app

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/001-todo-advanced/: 0001-specify-advanced-todo.spec.prompt.md  0002-plan-advanced-todo.plan.prompt.md  0003-tasks-advanced-todo.tasks.prompt.md  0004-implement-advanced-todo-features.green.prompt.md  0005-fix-cli-nameerror-datetime.green.prompt.md  0006-advanced-todo-implementation.green.prompt.md  0007-recurring-task-auto-reschedule-fix.red.prompt.md  0008-overdue-task-display-fix.red.prompt.md  0009-incomplete-indicator-red-color.red.prompt.md  0010-batch-reschedule-user-command.red.prompt.md  0011-auto-reschedule-recurrence-aware.red.prompt.md  0012-auto-reschedule-incomplete-only.red.prompt.md  0013-auto-reschedule-weekly-fix.red.prompt.md  0014-am-pm-time-display-feature.green.prompt.md  0015-am-pm-input-enhancement.green.prompt.md
history/prompts/002-todo-intermediate/: 0001-specify-intermediate-todo.spec.prompt.md  0002-plan-intermediate-todo.plan.prompt.md  0003-clarify-intermediate-todo.spec.prompt.md  0004-tasks-intermediate-todo.tasks.prompt.md  0005-implement-intermediate-todo.green.prompt.md
history/prompts/constitution/: 001-create-project-constitution.constitution.prompt.md  (+1 more)
specs/001-todo-advanced/: plan.md  spec.md  tasks.md
specs/001-todo-cli/: plan.md  spec.md  tasks.md
specs/002-todo-intermediate/: plan.md  spec.md  tasks.md
src/: cli.py  main.py  models.py  todo_service.py
tests/unit/: test_alerts.py  test_recurrence.py  test_search.py
(+10 files in other folders)
